@@ -3,6 +3,7 @@ python-glanceclient (1:1.1.0-1) UNRELEASED; urgency=medium
   * New upstream release.
   * d/control: Align (build-)depends with upstream.
   * d/p/fix-test-shell.patch: Dropped. Fixed in new upstream release.
+  * d/p/fix-has-expired-tests.patch: Rebased.
 
  -- Corey Bryant <corey.bryant@canonical.com>  Wed, 23 Sep 2015 15:40:13 -0400
 
